<resources>
    <string name="app_name">QuickChat</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_to_continue">login to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account_sign_in">Already have account? Sign in</string>
    <string name="type_a_message">Type a message</string>
</resources>